# python_piscine

./: links.txt  main.py  pyproject.toml
0/: .flake8
0/ex00/: Hello.py
0/ex01/: format_ft_time.py
0/ex02/: find_ft_type.py
0/ex03/: NULL_not_found.py
0/ex04/: tester.sh  whatis.py
0/ex05/: building.py
0/ex06/: filter_tester.py  filterstring.py  ft_filter.py
0/ex07/: exercise.py  match-case.py  sos.py
0/ex08/: Loading.py  tester_ex08.py
0/ex09/ft_package/: pyproject.toml  readme.md
0/ex09/ft_package/src/ft_package/: __init__.py  count_in_list.py
1/ex00/: give_bmi.py
1/ex01/: arrary2D.py
1/ex02/: load_image.py
1/ex03/: load_image.py  zoom.py
1/ex04/: load_image.py  rotate.py
1/ex05/: load_image.py  pimp_image.py
2/ex00/: load_csv.py  test
2/ex01/: aff_life.py
2/ex02/: aff_life.py
2/ex03/: projection_life.py
3/ex00/: S1E9.py
3/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
3/ex03/: ft_calculator.py
3/ex04/: ft_calculator.py
leet/: binary_tree_simple.py  binary_tree_simple_try2.py
