[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
Home-page = "https://github.com/eagle/ft_package"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "eagle"}, {email = "eagle@42.fr" }
]
classifiers = [
]

[project.urls]
Homepage = "https://github.com/eagle/ft_package"
